Fix overflow

--- a/assets/style/common.css
+++ b/assets/style/common.css
@@ -1,5 +1,7 @@
 * {
 	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
@@ -19,8 +21,7 @@ body {
 
 main {
 	display: block;
-	padding: 3em 4em;
-	padding-top: 2em;
+	padding: 4em;
 	margin: 2em;
 
 	background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/background-pixelated.png");
@@ -31,6 +32,14 @@ main {
 	background-repeat: no-repeat;
 
 	border: 0.25em solid rgba(255, 255, 255, 0.25);
+}
+
+main > * + * {
+	margin-top: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	margin-bottom: 2rem;
 }
 
 a {
